<resources>
    <string name="app_name">My Application</string>
    <string name="transmitter">Transmitter</string>
    <string name="receiver">Receiver</string>
    <string name="send_message">Send Message</string>
    <string name="transmitter_string">Transmitter</string>
    <string name="write_a_message_to_send">Write a message to send...</string>
    <string name="take_one">Take one!!</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>

</resources>